--- a/youtube.html
+++ b/youtube.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background-color: grey;
+        }
         .searchContainer{
             width: 50%;
             margin: auto;
@@ -20,6 +23,16 @@
             background-color: rgb(235,62,55);
             color: white;
             font-size: large;
+        }
+        #container{
+                    margin-top: 20px;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr 1fr ;
+                    width: 90%;
+                    margin: auto;
+        }
+        iframe{
+            margin: 5px;
         }
     </style>
 </head>
